Some UI fixes including huge white space in editor; sort logos by a new field created_at on fetch; code style

--- a/frontend/src/components/Form/style.css
+++ b/frontend/src/components/Form/style.css
@@ -1,100 +1,94 @@
 .title-form-body {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 .form-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 30px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 30px;
 }
 
 .form {
-  margin: auto;
+    margin: auto;
 }
 
 .hidden {
-  visibility: hidden;
-  width: 0;
-  height: 0;
+    display: none !important;
 }
 
 .options-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 30px;
-  align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    align-items: center;
 }
 
 /* idle */
 .label-as-button {
-  width: 15rem;
-  height: 3rem;
-  cursor: pointer;
-  text-align: center;
-  line-height: 1.2em;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
-  box-shadow:
-          0 2px 8px rgb(0 0 0 / 20%),
-          inset 8px 8px 16px rgba(0, 0, 0, 0);
+    width: 15rem;
+    height: 3rem;
+    cursor: pointer;
+    text-align: center;
+    line-height: 1.2em;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 20%),
+    inset 8px 8px 16px rgba(0, 0, 0, 0);
 
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 
-  -webkit-transition: all 0.3s ease; /* Safari and Chrome */
-  -moz-transition: all 0.3s ease; /* Firefox */
-  -ms-transition: all 0.3s ease; /* IE 9 */
-  -o-transition: all 0.3s ease; /* Opera */
-  transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease; /* Safari and Chrome */
+    -moz-transition: all 0.3s ease; /* Firefox */
+    -ms-transition: all 0.3s ease; /* IE 9 */
+    -o-transition: all 0.3s ease; /* Opera */
+    transition: all 0.3s ease;
 }
 
 .label-as-button:has(input:disabled) {
-  cursor: not-allowed;
-  box-shadow:
-          0 1px 1px rgb(0 0 0 / 20%),
-          inset 8px 8px 16px rgba(0, 0, 0, 0);
+    cursor: not-allowed;
+    box-shadow: 0 1px 1px rgb(0 0 0 / 20%),
+    inset 8px 8px 16px rgba(0, 0, 0, 0);
 }
 
 /* hover */
 .label-as-button:hover {
-  box-shadow:
-          0 2px 20px rgb(0 0 0 / 20%),
-          inset 8px 8px 16px rgba(0, 0, 0, 0);
+    box-shadow: 0 2px 20px rgb(0 0 0 / 20%),
+    inset 8px 8px 16px rgba(0, 0, 0, 0);
 }
 
 
 /* pushed */
 .label-as-button:has(input[type=checkbox]:checked),
 .label-as-button:has(input[type=radio]:checked) {
-  box-shadow:
-          0 2px 20px rgb(0 0 0 / 0%),
-          inset 3px 3px 8px 3px rgb(216, 232, 222),
-          inset -3px -3px 6px 1px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 2px 20px rgb(0 0 0 / 0%),
+    inset 3px 3px 8px 3px rgb(216, 232, 222),
+    inset -3px -3px 6px 1px rgba(255, 255, 255, 0.5);
 }
 
 
 .range-slider__tooltip {
-  position: unset;
-  width: 60%;
-  /*margin-top: 10px;*/
-  margin: auto;
+    position: unset;
+    width: 60%;
+    /*margin-top: 10px;*/
+    margin: auto;
 }
 
 .range-slider {
-  /*position: unset !important;*/
-  width: 60%;
-  display: block;
-  margin: auto;
+    /*position: unset !important;*/
+    width: 60%;
+    display: block;
+    margin: auto;
 }
